[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Barrel1.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Barrel/Barrel2.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.7022
height = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.9828, 3.58261 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.6286, 27.6645 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 42.3074, 58.5323 )

[node name="Barrel" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.40309, 15.7145 )
z_index = 1
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.96426, -53.0362 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -3.3674, 22.7299 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 4 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
